<resources>
    <string name="app_name">Dragon´s Cave</string>
    <string name="game_name">JUEGUITO</string>
    <string name="play">PLAY</string>
    <string name="creditos">CREDITOS</string>
    <string name="time">TIME</string>
    <string name="numero">NÚMERO</string>
    <string name="nombre">NOMBRE</string>
    <string name="warning">No se guardarán los cambios realizados, ¿Seguro que quieres continuar?</string>
    <string name="horario">HORARIO</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="modificar">MODIFICAR</string>
    <string name="consultar">CONSULTAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="hora">HORA</string>
    <string name="añadirMedicamento">CREAR NUEVA ALERTA</string>
    <string name="modificarMedicamento">MODIFICAR ALERTA</string>
</resources>