<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flyingisland">

    <Button
        android:id="@+id/playButton"
        android:layout_width="198dp"
        android:layout_height="47dp"
        android:background="@drawable/custom_button"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        tools:text="@string/play" />

    <Button
        android:id="@+id/pruebas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/creditos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        android:background="@drawable/custom_button"/>

    <ImageButton
        android:id="@+id/ajustes"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/outline_settings_white_18" />

    <ImageButton
        android:id="@+id/musicOnButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/ic_baseline_music_note_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/musicOffButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/ic_baseline_music_off_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/timeButton"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756"
        app:srcCompat="@drawable/outline_schedule_white_18" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="292dp"
        android:layout_height="110dp"
        android:fontFamily="@font/mandhor"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#E31D1D"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />
</androidx.constraintlayout.widget.ConstraintLayout>